# ReadFlow

./: .gitignore  AGENTS.md  README.md  RELEASE.md  design-qa.md  index.html  package-lock.json  package.json  vite.config.ts
runtime/: pi-runtime.ts  web-tools.ts
scripts/: build-ai-runtime.mjs  create-updater-manifest.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  quick-windows.json
src-tauri/src/: ai.rs  lib.rs  main.rs  quick_capture.rs  selection_capture.rs
src/app/: App.tsx  useLearners.ts
src/features/home/: HomeWorkspace.tsx
src/features/learners/: LearnerSwitcher.tsx
src/features/profile/: ProfileWorkspace.tsx
src/features/quick-explanation/: QuickExplainerApp.tsx
src/features/quick-translation/: QuickTranslatorApp.tsx
src/features/reading/: ReadingWorkspace.tsx
src/features/settings/: SettingsWorkspace.tsx
src/features/translation/: TranslationWorkspace.tsx
src/features/vocabulary/: VocabularyWorkspace.tsx
src/services/ai/: aiGateway.ts
src/services/desktop/: appUpdates.ts  quickCapture.ts
src/services/learning/: profileUpdater.ts
src/services/storage/: learnerRepository.ts  quickHistoryRepository.ts
src/shared/: AccessibilityPermissionHelp.tsx  WindowPinButton.tsx  types.ts
