[package]
name = "readflow"
version = "0.1.3"
description = "ReadFlow AI English learning workbench"
authors = ["fanpeng"]
edition = "2021"

[lib]
name = "readflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
keyring = "4.1"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-ng = "0.1.6"
accessibility-sys-ng = "0.1.3"
arboard = { version = "3.6", features = ["image-data"] }
core-foundation = "0.9.4"
enigo = "0.2.1"
